--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,6 +29,7 @@ under the License.
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <%= favicon_tag 'images/favicon.ico' %>
     <title><%= current_page.data.title || "API Documentation" %></title>
 
     <style>
@@ -44,14 +45,51 @@ under the License.
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
+
     <a href="#" id="nav-button">
-      <span>
-        NAV
-        <%= image_tag('navbar.png') %>
-      </span>
+      <!-- <span>
+        <%= image_tag('https://huobiapi.github.io/docs/spot/v1/cn/images/logo.svg') %>
+      </span> -->
     </a>
+
+    <header>
+      <div class="flex_box">
+     <!--    <%= image_tag "images/logo.svg", class: 'logo' %>
+         -->
+        <div class="nav_box">
+          <span class="nav_cell" style="display: none">
+            <a href="javascript:;" class="nav_first">v1<i class="icon_nav"></i></a>
+            <ul class="nav_ul">
+              <li>
+                <a href="/docs/spot/v1/en/" id="v1_url">v1</a>
+              </li>
+              <li>
+                <a href="/docs/spot/v2/en/" id="v2_url">v2</a>
+              </li>
+            </ul>
+          </span>
+          <span class="nav_cell nav_tab">
+            <a href="/docs/spot/v1/en/" id="btn_spot">现货</a>
+          </span>
+          <span class="nav_cell nav_tab">
+            <a href="/docs/dm/v1/en/" id="btn_dm">合约</a>
+          </span>
+ <!--          <span class="nav_cell nav_tab">
+            <a href="/docs/coin_margined_swap/v1/en/" id="btn_coin_margined_swap">币本位永续合约</a>
+          </span> -->
+          <!-- <span class="nav_cell nav_tab">
+            <a href="/docs/swap/v1/en/" id="btn_swap">永续合约</a>
+          </span> -->
+        </div>
+      </div>
+
+      <a href="/docs/spot/v1/en/" class="lang" id="lang_box" style="display: block;">English</a>
+
+    </header>
+
+
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
+    
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
