--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -88,13 +88,13 @@ under the License.
         </div>
       </div>
 
-     <% if current_page.data.lang_en %>
-        <a href="/slate/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
+     <% if current_page.data.lang_cn %>
+        <a href="/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
       <% end %>
 
 
-     <% if current_page.data.lang_cn %>
-        <a href="/slate/docs/spot/v2/cn/" class="lang" id="lang_box" style="display: block;">English</a> 
+     <% if current_page.data.lang_en %>
+        <a href="/" class="lang" id="lang_box" style="display: block;">中文</a> 
       <% end %>
 
       
