--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -89,12 +89,12 @@ under the License.
       </div>
 
      <% if current_page.data.lang_cn %>
-        <a href="/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
+        <a href="https://adamlo-oss.github.io/slate/docs/spot/v2/en/" class="lang" id="lang_box" style="display: block;">English</a> 
       <% end %>
 
 
      <% if current_page.data.lang_en %>
-        <a href="/" class="lang" id="lang_box" style="display: block;">中文</a> 
+        <a href="https://adamlo-oss.github.io/slate/" class="lang" id="lang_box" style="display: block;">中文</a> 
       <% end %>
 
       
